--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
-    "name": "laravel/laravel",
-    "description": "The Laravel Framework.",
+    "name": "ergare17/Tasks",
+    "description": "Ergare17 Tasks",
     "keywords": ["framework", "laravel"],
     "license": "MIT",
     "type": "project",
