--- a/package.json
+++ b/package.json
@@ -47,6 +47,9 @@
     "vue-test-utils": "^1.0.0-beta.5"
   },
   "dependencies": {
+    "medium-editor": "^5.23.3",
+    "quill": "^1.3.4",
+    "vue-js-toggle-button": "^1.2.2",
     "vue-multiselect": "^2.0.6"
   }
 }
