--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "medium-editor": "^5.23.3",
     "quill": "^1.3.4",
     "vue-js-toggle-button": "^1.2.2",
-    "vue-multiselect": "^2.0.8"
+    "vue-multiselect": "^2.0.8",
+    "vue2-medium-editor": "^1.1.2"
   }
 }
