--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "quill": "^1.3.4",
     "vue-js-toggle-button": "^1.2.2",
     "vue-multiselect": "^2.0.8",
+    "vue-quill-editor": "^3.0.4",
     "vue2-medium-editor": "^1.1.2"
   }
 }
