--- a/package.json
+++ b/package.json
@@ -14,44 +14,44 @@
   },
   "devDependencies": {
     "acacha-forms": "^1.0.8",
-    "admin-lte": "^2.4.2",
+    "admin-lte": "^2.4.3",
     "axios": "^0.16.2",
     "babel-eslint": "^7.1.1",
     "bootstrap-less": "3.3.7",
     "bootstrap-sass": "3.3.7",
     "bower": "^1.8.2",
-    "cross-env": "^5.1.3",
+    "cross-env": "^5.1.4",
     "eslint": "^3.14.1",
     "eslint-config-standard": "^6.2.1",
     "eslint-friendly-formatter": "^2.0.7",
     "eslint-loader": "^1.6.1",
     "eslint-plugin-html": "^2.0.0",
-    "eslint-plugin-promise": "^3.4.0",
+    "eslint-plugin-promise": "^3.7.0",
     "eslint-plugin-standard": "^2.0.1",
     "expect": "^21.2.1",
     "font-awesome": "^4.7.0",
     "icheck": "^1.0.2",
     "ionicons": "^3.0.0",
-    "jquery": "^3.1.1",
-    "jsdom": "^11.5.1",
+    "jquery": "^3.3.1",
+    "jsdom": "^11.6.2",
     "jsdom-global": "^3.0.2",
     "laravel-mix": "^1.7.2",
-    "less": "^3.0.0-alpha.3",
-    "less-loader": "^4.0.5",
-    "lodash": "^4.17.4",
+    "less": "^3.0.1",
+    "less-loader": "^4.1.0",
+    "lodash": "^4.17.5",
     "mocha": "^4.1.0",
-    "mocha-webpack": "^1.0.1",
+    "mocha-webpack": "^1.1.0",
     "moxios": "^0.4.0",
     "toastr": "^2.1.4",
-    "vue": "^2.5.13",
-    "vue-test-utils": "^1.0.0-beta.9"
+    "vue": "^2.5.16",
+    "vue-test-utils": "^1.0.0-beta.11"
   },
   "dependencies": {
     "medium-editor": "^5.23.3",
-    "quill": "^1.3.4",
+    "quill": "^1.3.6",
     "vue-js-toggle-button": "^1.2.2",
-    "vue-multiselect": "^2.0.8",
-    "vue-quill-editor": "^3.0.4",
-    "vue2-medium-editor": "^1.1.2"
+    "vue-multiselect": "^2.1.0",
+    "vue-quill-editor": "^3.0.5",
+    "vue2-medium-editor": "^1.1.4"
   }
 }
